--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,10 @@
         }
     }
 
+    header nav {
+        margin-right: 20px;
+    )
+
     header nav ul {
         display: flex;
         flex-direction: row;
@@ -58,7 +62,7 @@
         margin-top: 6px;
         box-shadow: 0 0 10px black;
         padding: 10px;
-        max-width: 300px;
+        max-width: 250px;
         border-radius: 10px;
         overflow-x: auto;
         margin-left: 20px;
